--- a/Transfer_Learning/arxiv_version/paper_main.tex
+++ b/Transfer_Learning/arxiv_version/paper_main.tex
@@ -117,14 +117,20 @@
 
 %%%%%%%%% AUTHORS
 % WILL NEED TO REARRANGE THE AUTHORS LIST & GET CORRECT INSTITUTIONS / EMAILS
-\author{T.S. Jayram \and  Vincent Marois \and \and Tomasz Kornuta \and Vincent Albouy \and Emre Sevgen \and Ahmet Ozcan\\
-IBM Research AI\\
-Almaden Research Center, San Jose, CA 95120, USA\\
-Thomas J. Watson Research Center, Yorktown Heights, NY 10598, USA\\
-{\tt\small \{jayram,  asozcan\}@us.ibm.com}
-{\tt\small \{tkornuta, sesevgen\}@gmail.com}
-{\tt\small vincent.marois@ibm.com}
+\author{%
+	T.S. Jayram\thanks{IBM Research AI.
+		\textit{Location}: Almaden Research Center, San Jose, CA, USA.} \and  
+	Vincent Marois\thanks{IBM Research AI. 
+		\textit{Location}: Thomas J. Watson Research Center, Yorktown Heights, NY, USA.} \and 
+	Tomasz Kornuta\thanks{Nvidia Research. 
+		\textit{Location}: Santa Clara, CA, USA.
+		Work done while employed at IBM Research AI.} \and 
+	Vincent Albouy  \and 
+	Emre Sevgen \and 
+	Ahmet Ozcan\footnotemark[1]
 }
+	
+%\author{ABC\thanks{XYZ} \and DEF\thanks{UVW} \and GHI\footnotemark[1]}
 
 \maketitle
 
