--- a/Transfer_Learning/cvpr_submission/experiments.tex
+++ b/Transfer_Learning/cvpr_submission/experiments.tex
@@ -41,12 +41,12 @@ The most important results are highlighted in~\cref{fig:samnet_cog_detailed}; fu
 	\centering
 	\begin{subfigure}{\textwidth}
 		\centering
-		\includegraphics[width=0.9\textwidth]{../img/results/samnet_cog_orig_canonical_no_labels.png}
+		\includegraphics[width=0.9\textwidth]{../results/samnet_cog_orig_canonical_no_labels.png}
 	\end{subfigure}%
 	\newline
 	\begin{subfigure}{\textwidth}
 		\centering
-		\includegraphics[width=0.9\textwidth]{../img/results/samnet_cog_orig_hard.png}
+		\includegraphics[width=0.9\textwidth]{../results/samnet_cog_orig_hard.png}
 	\end{subfigure}%
 	\caption{Comparison of test set accuracies of SAMNet (blue) with original results achieved by the 
 		baseline model~\cite{yang2018dataset} (gray) on Canonical (top) and Hard (bottom) variants of the COG dataset.}
@@ -99,7 +99,7 @@ We also observe no learning for \textit{Count} and \textit{QueryAttribute}. As t
 
 \begin{figure}[!t]
 	\centering
-	\includegraphics[width=\columnwidth]{../img/results/CoGenT_results.pdf}
+	\includegraphics[width=\columnwidth]{../results/CoGenT_results.pdf}
 	\caption{CLEVR-CoGenT accuracies for all tasks $t$ when training on $t$ only, training on all tasks jointly and training on all tasks but $t$.} %For all experiments, the validation and test sets are identical.
 	\label{fig:CoGenT-results}
 \end{figure}
@@ -137,7 +137,7 @@ Below, substitute each of \textit{Shape} and \textit{Color} for  \uX{} to obtain
 
 \begin{figure}[!t]
 	\centering
-	\includegraphics[width=\columnwidth]{../img/results/COG_reasoning_transfer_v3}
+	\includegraphics[width=\columnwidth]{../results/COG_reasoning_transfer_v3}
 	\caption{COG accuracies for all task groups $t$ when training on $t$ only; training on Group A or B; and on all tasks.}
 	\label{fig:COG-reasoning-results}
 \end{figure}
@@ -196,7 +196,7 @@ performance on longer video frames with more complex scenes.
 
 \begin{figure}[htb]
 	\centering
-	\includegraphics[width=\columnwidth]{../img/results/samnet_cog_overall_transfer.png}
+	\includegraphics[width=\columnwidth]{../results/samnet_cog_overall_transfer.png}
 	\caption{Total accuracies of SAMNet (blue) and baseline models (light/dark gray) when testing generalization from Canonical to Hard variants of the dataset.}
 	\label{fig:samnet_cog_overall_transfer}
 \end{figure}
@@ -234,7 +234,7 @@ We conduct 2 experiments with SAMNet trained on CoGenT-A:
 
 \begin{figure}[!t]
 	\centering
-	\includegraphics[width=0.8\columnwidth]{../img/results/CoGenT_B_results.pdf}
+	\includegraphics[width=0.8\columnwidth]{../results/CoGenT_B_results.pdf}
 	\caption{Test accuracy on CoGenT-A \& -B when training on CoGenT-A (blue) and fine-tuning on CoGenT-B (gray).}
 	\label{fig:CoGenT-B-results}
 \end{figure}
