--- a/Transfer_Learning/cvpr_submission/supplementary_material.tex
+++ b/Transfer_Learning/cvpr_submission/supplementary_material.tex
@@ -2,12 +2,22 @@
 
 \usepackage{cvpr}
 \usepackage{times}
+
 \usepackage{booktabs}
-\usepackage{multirow}
-\usepackage{url}
-\usepackage{enumitem}
 \usepackage{adjustbox}
-\usepackage[pagebackref=true,breaklinks=true,colorlinks,bookmarks=false]{hyperref}
+\usepackage{xcolor}
+
+\usepackage{hyperref}
+\hypersetup{
+	colorlinks,
+	breaklinks,
+	linkcolor={red!50!black},
+	citecolor={blue!50!black},
+	urlcolor={blue!80!black},
+}
+
+\usepackage{cleveref}
+\crefname{table}{Table}{Tables}
 
 %\cvprfinalcopy % *** Uncomment this line for the final submission
 
@@ -22,7 +32,7 @@
 \begin{document}
 
 %%%%%%%%% TITLE
-\title{Transfer Learning in Multimodal Compositional and Relational Reasoning:\\Supplementary Material}
+\title{Transfer Learning in Visual and Relational Reasoning\\ (Supplementary Material)}
 
 %%%%%%%%% AUTHORS
 \author{T.S. Jayram \and  Vincent Marois \and Vincent Albouy \and Tomasz Kornuta  \and Emre Sevgen \and Ahmet Ozcan\\
@@ -38,10 +48,11 @@ Thomas J. Watson Research Center, Yorktown Heights, NY 10598, USA\\
 
 \input{appendix}
 
+\bigskip
+
 \clearpage
-{\small
-	\bibliographystyle{ieee_fullname}
-	\bibliography{bibliography}
-}
+\bibliographystyle{ieee_fullname}
+\bibliography{bibliography}
+
 
 \end{document}
