--- a/Transfer_Learning/cvpr_submission/cvpr_paper_main.tex
+++ b/Transfer_Learning/cvpr_submission/cvpr_paper_main.tex
@@ -123,14 +123,23 @@
 
 %%%%%%%%% AUTHORS
 % WILL NEED TO REARRANGE THE AUTHORS LIST & GET CORRECT INSTITUTIONS / EMAILS
-\author{T.S. Jayram \and  Vincent Marois \and Vincent Albouy \and Tomasz Kornuta  \and Emre Sevgen \and Ahmet Ozcan\\
-IBM Research AI\\
-Almaden Research Center, San Jose, CA 95120, USA\\
-Thomas J. Watson Research Center, Yorktown Heights, NY 10598, USA\\
-{\tt\small {jayram,  asozcan}@us.ibm.com}
-{\tt\small {tkornuta, sesevgen}@gmail.com}
-{\tt\small vincent.marois@ibm.com}
+\author{%
+	T.S. Jayram\thanks{IBM Research AI.} \and  
+	Vincent Marois\footnotemark[2] \and 
+	Tomasz Kornuta\thanks{Nvidia Research.} \and 
+	Vincent Albouy\thanks{} \and 
+	Emre Sevgen\thanks{Citrine Informatics.}  \and 
+	Ahmet Ozcan\footnotemark[2]
 }
+%
+%\author{T.S. Jayram \and  Vincent Marois \and Vincent Albouy \and Tomasz Kornuta  \and Emre Sevgen \and Ahmet Ozcan\\
+%IBM Research AI\\
+%Almaden Research Center, San Jose, CA 95120, USA\\
+%Thomas J. Watson Research Center, Yorktown Heights, NY 10598, USA\\
+%{\tt\small {jayram,  asozcan}@us.ibm.com}
+%{\tt\small {tkornuta, sesevgen}@gmail.com}
+%{\tt\small vincent.marois@ibm.com}
+%}
 
 \maketitle
 
@@ -155,7 +164,7 @@ Thomas J. Watson Research Center, Yorktown Heights, NY 10598, USA\\
 \clearpage
 {\small
 \bibliographystyle{ieee_fullname}
-\bibliography{bibliography}
+\bibliography{../bibliography}
 }
 
 %\clearpage
