--- a/Transfer_Learning/cvpr_submission/cvpr_supplementary_material.tex
+++ b/Transfer_Learning/cvpr_submission/cvpr_supplementary_material.tex
@@ -52,7 +52,7 @@ Thomas J. Watson Research Center, Yorktown Heights, NY 10598, USA\\
 
 \clearpage
 \bibliographystyle{ieee_fullname}
-\bibliography{bibliography}
+\bibliography{../bibliography}
 
 
 \end{document}
