--- a/Transfer_Learning/arxiv_version/arxiv_paper_main.tex
+++ b/Transfer_Learning/arxiv_version/arxiv_paper_main.tex
@@ -80,19 +80,16 @@
 
 %%%%%%%%% TITLE
 \title{Transfer Learning in Visual and Relational Reasoning\footnote{%
-		Major portion of this work was done when all the authors were at IBM Research AI (Almaden)}}
+		This work was primarily done at IBM Research AI.}}
 
 %%%%%%%%% AUTHORS
 % WILL NEED TO REARRANGE THE AUTHORS LIST & GET CORRECT INSTITUTIONS / EMAILS
 \author{%
-	T.S. Jayram\thanks{IBM Research AI.
-		Location: \textit{Almaden Research Center, San Jose, CA, USA}.} \and  
-	Vincent Marois\thanks{IBM Research AI. 
-		Location: \textit{Thomas J. Watson Research Center, Yorktown Heights, NY, USA}.} \and 
-	Tomasz Kornuta\thanks{Nvidia Research. 
-		Location: \textit{Santa Clara, CA, USA}.} \and 
+	T.S. Jayram\thanks{IBM Research AI. \textit{Almaden Research Center, San Jose, CA, USA}.} \and  
+	Vincent Marois\thanks{IBM Research AI. \textit{Thomas J. Watson Research Center, Yorktown Heights, NY, USA}.} \and 
+	Tomasz Kornuta\thanks{Nvidia Research. \textit{Santa Clara, CA, USA}.} \and 
 	Vincent Albouy\thanks{} \and 
-	Emre Sevgen\thanks{University of Chicago.}  \and 
+	Emre Sevgen\thanks{Citrine Informatics}  \and 
 	Ahmet Ozcan\footnotemark[2]
 }
 
@@ -119,9 +116,11 @@
 \input{summary}
 
 \bibliographystyle{alpha}
-\bibliography{bibliography}
+\bibliography{../bibliography}
 
 \newpage
+\appendix
+
 \input{appendix}
 
 \end{document}
