--- a/Transfer_Learning/arxiv_version/appendix.tex
+++ b/Transfer_Learning/arxiv_version/appendix.tex
@@ -70,8 +70,8 @@ The Canonical and Hard variants of the COG dataset~\cite{yang2018dataset} are co
 \begin{table*}[htb]
 	\centering
 	\begin{adjustbox}{width=\columnwidth}
-		\begin{tabular}{l c c c c c c c c c c c}
-			\toprule
+		\begin{tabular}{l r r r r r r r r r r r}
+			\toprule[1.25pt]
 			Model & \multicolumn{4}{c}{SAMNet} &  &\multicolumn{4}{c}{Baseline Model} & & SoftPaths \\
 			\cmidrule(lr){2-5} 
 			\cmidrule(lr){7-10} 
@@ -81,9 +81,9 @@ The Canonical and Hard variants of the COG dataset~\cite{yang2018dataset} are co
 			Trained on       & canonical & canonical & canonical & hard &           &  canonical  & canonical  & canonical & hard & & canonical\\ 
 			Fine tuned on  & - & - & hard  & - &           & -   & - & hard & - & & -\\ 
 			Tested on        & canonical & hard & hard & hard &            &canonical  & hard & hard & hard & & canonical \\ 
-			\midrule			
+			\midrule[1pt]	
 			Overall accuracy & 98.0 & 91.6 & 96.5  & 96.1 &           & 97.6  & 65.9 & 78.1& 80.1     &   &  96.1  \\ 
-			\midrule 
+			\midrule[1pt] 
 			AndCompareColor    &    93.5    &    82.7    &    89.2    &    80.6    &    &    81.9    &    57.1    &    60.7    &    51.4    &   &    77.9    \\
 			AndCompareShape    &    93.2    &    83.7    &    89.7    &    80.1    &    &    80.0    &    53.1    &    50.3    &    50.7    &   &    77.0    \\
 			AndSimpleCompareColor    &    99.2    &    85.3    &    97.6    &    99.4    &    &    99.7    &    53.4    &    77.1    &    78.2    &   &    92.9    \\
@@ -107,10 +107,10 @@ The Canonical and Hard variants of the COG dataset~\cite{yang2018dataset} are co
 			GetShapeSpace    &    97.5    &    89.4    &    93.9    &    94.3    &    &    98.1    &    78.7    &    77.3    &    90.3    &   &    98.3    \\
 			SimpleCompareShape    &    99.9    &    91.4    &    99.7    &    99.9    &    &    100.0    &    67.7    &    96.7    &    99.3    &   &    94.5    \\
 			SimpleCompareColor    &    100.0    &    91.6    &    99.8    &    99.9    &    &    100.0    &    64.2    &    90.4    &    99.3    &   &    94.1    \\
-			\bottomrule
+			\bottomrule[1.25pt]
 		\end{tabular}
 	\end{adjustbox}
-	\caption{COG test set accuracies for SAMNet, the baseline model~\cite{yang2018dataset} and the ``SoftPaths'' model~\cite{haurilet2019s}. The `paper' columns for the Baseline model denote results taken from~\cite{yang2018dataset} along with some further author clarifications (private communication)  to obtain the performance on individual task types while `code' denotes results of our experiments using their implementation~\cite{yang2018implement}. Similarly, the performance of  the ``SoftPaths'' model on individual task types was obtained from the authors of that paper upon our request.} 
+	\caption{COG test set accuracies for SAMNet, the baseline model~\cite{yang2018dataset} and the ``SoftPaths'' model~\cite{haurilet2019s}. For the baseline model, `paper' denotes results reproduced from~\cite{yang2018dataset} along with some further clarifications by the authors (private communication)  regarding the performance on individual task types while `code' denotes results of our experiments using their implementation~\cite{yang2018implement}. Similarly, the performance of  the ``SoftPaths'' model on individual task types was obtained from the authors of that paper upon our request.} 
     \label{tab:all-results}
 \end{table*}
 
