--- a/Transfer_Learning/cvpr_submission/appendix.tex
+++ b/Transfer_Learning/cvpr_submission/appendix.tex
@@ -24,6 +24,7 @@ The combinations of attributes in CoGenT-A and CoGenT-B are shown in~\cref{tab:c
 		CoGenT-B	&	Red / Green / Purple / Cyan	&	Gray / Blue / Brown / Yellow	&	Any color 	\\
 		\bottomrule
 	\end{tabular}
+	\smallskip
 	\caption{Colors \& shapes combinations present in CoGenT-A \& -B datasets.}
 	\label{tab:cogent_conditions_supplement}
 \end{table}
@@ -41,6 +42,7 @@ The Canonical and Hard variants of the COG dataset~\cite{yang2018dataset} are co
 		Hard  & 8 & 7 & 10 & 10000320 & 500016  & 500016 \\
 		\bottomrule	
 	\end{tabular}
+	\smallskip
 	\caption{Details of the Canonical and Hard variants of the COG dataset.}
 	\label{tab:cog_variants_supplement}
 \end{table}
@@ -70,8 +72,8 @@ The Canonical and Hard variants of the COG dataset~\cite{yang2018dataset} are co
 \begin{table*}[htb]
 	\centering
 	\begin{adjustbox}{width=\textwidth}
-		\begin{tabular}{l c c c c c c c c c}
-			\toprule
+		\begin{tabular}{l r r r r r r r r r r}
+			\toprule[1.25pt]
 			Model & \multicolumn{4}{c}{SAMNet} &  &\multicolumn{4}{c}{Baseline Model} \\
 			\cmidrule(lr){2-5} 
 			\cmidrule(lr){7-10} 
@@ -80,9 +82,9 @@ The Canonical and Hard variants of the COG dataset~\cite{yang2018dataset} are co
 			Trained on       & canonical & canonical & canonical & hard &           &  canonical  & canonical  & canonical & hard \\ 
 			Fine tuned on  & - & - & hard  & - &           & -   & - & hard & - \\ 
 			Tested on        & canonical & hard & hard & hard &            &canonical  & hard & hard & hard  \\ 
-			\midrule			
+			\midrule[1pt]	
 			Overall accuracy & 98.0 & 91.6 & 96.5  & 96.1 &           & 97.6  & 65.9 & 78.1& 80.1 \\ 
-			\midrule 
+			\midrule[1pt]	
 			AndCompareColor			&	93.5	&	82.7	&	89.2	&	80.6	&	&	81.9	&	57.1	&	60.7	&	51.4	 \\
 			AndCompareShape			&	93.2	&	83.7	&	89.7	&	80.1	&	&	80.0	&	53.1	&	50.3	&	50.7 \\
 			AndSimpleCompareColor		&	99.2	&	85.3	&	97.6	&	99.4	&	&	99.7	&	53.4	&	77.1	&	78.2 \\
@@ -98,7 +100,7 @@ The Canonical and Hard variants of the COG dataset~\cite{yang2018dataset} are co
 			ExistLastShapeSameColor		&	98.2	&	98.5	&	98.8	&	97.5	&	&	100.0	&	87.8	&	60.4	&	50.3 \\
 			ExistShape			&	100.0	&	99.5	&	100.0	&	100.0	&	&	100.0	&	77.1	&	98.2	&	92.5 \\
 			ExistShapeOf			&	99.4	&	95.9	&	99.2	&	99.2	&	&	100.0	&	52.7	&	74.7	&	72.70 \\
-			ExistShapeSpace			&	93.4	&	87.5	&	91.1	&	90.5	&	&	97.7	&	70	&	89.8	&	89.80 \\
+			ExistShapeSpace			&	93.4	&	87.5	&	91.1	&	90.5	&	&	97.7	&	70.0	&	89.8	&	89.80 \\
 			ExistSpace			&	95.3	&	89.7	&	93.2	&	93.3	&	&	98.9	&	71.1	&	88.1	&	92.8 \\
 			GetColor			&	100.0	&	95.8	&	99.9	&	100.0	&	&	100.0	&	71.4	&	83.1	&	97.9 \\
 			GetColorSpace			&	98.0	&	90.0	&	95.0	&	95.4	&	&	98.2	&	71.8	&	73.	&	92.3 \\
@@ -106,10 +108,12 @@ The Canonical and Hard variants of the COG dataset~\cite{yang2018dataset} are co
 			GetShapeSpace			&	97.5	&	89.4	&	93.9	&	94.3	&	&	98.1	&	78.7	&	77.3	&	90.3 \\
 			SimpleCompareShape		&	99.9	&	91.4	&	99.7	&	99.9	&	&	100.0	&	67.7	&	96.7	&	99.3 \\
 			SimpleCompareColor		&	100.0	&	91.6	&	99.80	&	99.9	&	&	100.0	&	64.2	&	90.4	&	99.3 \\
-			\bottomrule
+			\bottomrule[1.25pt]
 		\end{tabular}
 	\end{adjustbox}
-	\caption{COG test set accuracies for SAMNet and the baseline model~\cite{yang2018dataset}. The `paper' columns for the baseline model denote results taken from~\cite{yang2018dataset} along with some further author clarifications (private communication) to obtain the performance on individual task types while `code' denotes results of our experiments using their implementation~\cite{yang2018implement}.}
+	\smallskip
+	\caption{COG test set accuracies for SAMNet and the baseline model~\cite{yang2018dataset}. For the baseline model,
+		`paper' denotes results reproduced from~\cite{yang2018dataset} along with some further clarifications by the authors (private communication)  regarding the performance on individual task types while `code' denotes results of our experiments using their implementation~\cite{yang2018implement}.}
 	\label{tab:all-results}
 \end{table*}
 
@@ -158,6 +162,7 @@ The Canonical and Hard variants of the COG dataset~\cite{yang2018dataset} are co
 		\bottomrule
 	\end{tabular}
 	\end{adjustbox}
+    \smallskip
 	\caption{Complete set of results for SAMNet on CLEVR-CoGenT.}
 	\label{tab:CoGenT-results}
 \end{table*}
