Title + author Figure placement

--- a/Transfer_Learning/arxiv_version/arxiv_paper_main.tex
+++ b/Transfer_Learning/arxiv_version/arxiv_paper_main.tex
@@ -79,18 +79,18 @@
 \begin{document}
 
 %%%%%%%%% TITLE
-\title{Transfer Learning in Visual and Relational Reasoning\footnote{%
-		This work was primarily done at IBM Research AI.}}
+\title{Transfer Learning in Visual and Relational Reasoning}
 
 %%%%%%%%% AUTHORS
 % WILL NEED TO REARRANGE THE AUTHORS LIST & GET CORRECT INSTITUTIONS / EMAILS
 \author{%
-	T.S. Jayram\thanks{IBM Research AI. \textit{Almaden Research Center, San Jose, CA, USA}.} \and  
-	Vincent Marois\thanks{IBM Research AI. \textit{Thomas J. Watson Research Center, Yorktown Heights, NY, USA}.} \and 
-	Tomasz Kornuta\thanks{Nvidia Research. \textit{Santa Clara, CA, USA}.} \and 
-	Vincent Albouy\thanks{} \and 
-	Emre Sevgen\thanks{Citrine Informatics}  \and 
-	Ahmet Ozcan\footnotemark[2]
+T.S. Jayram\thanks{\textit{Almaden Research Center, San Jose, CA, USA}.} \hspace{1cm} \and  
+Vincent Marois\thanks{\textit{Thomas J. Watson Research Center, Yorktown Heights, NY, USA}.} \hspace{1cm} \and 
+Tomasz Kornuta\thanks{Currently at Nvidia. \textit{Santa Clara, CA, USA}.} \and
+\hspace{2cm} Vincent Albouy\footnotemark[1]  \hspace{1cm} \and 
+Emre Sevgen\thanks{Currently at Citrine Informatics}  \hspace{1cm} \and 
+Ahmet S. Ozcan\footnotemark[1] \and \\
+IBM Research AI
 }
 
 \date{}
