--- a/Transfer_Learning/arxiv_version/experiments.tex
+++ b/Transfer_Learning/arxiv_version/experiments.tex
@@ -233,7 +233,7 @@ Performance of SAMNet on CoGenT (\cref{fig:CoGenT-B-results}) is clearly worse o
 Fine-tuning for a single epoch allows an observable increase of 15 pts on CoGenT-B, and a slight drop on CoGenT-A.
 Both are consistent with findings from the literature~\cite{johnson2017inferring, mascharka2018transparency, perez2018film}.
 
-\begin{figure}[!b]
+\begin{figure}[!t]
 	\centering
 	\includegraphics[width=0.6\textwidth]{../results/CoGenT_B_results.pdf}
 	\caption{Test accuracy on CoGenT-A \& -B when training on CoGenT-A (blue) and fine-tuning on CoGenT-B (gray).}
