--- a/Transfer_Learning/arxiv_version/appendix.tex
+++ b/Transfer_Learning/arxiv_version/appendix.tex
@@ -13,7 +13,7 @@ The CoGenT dataset~\cite{johnson2017clevr} contains:
 	\item Scene graphs and functional programs for all training/validation images/questions.
 \end{itemize}
 
-The combinations of attributes in CoGenT-A and CoGenT-B are shown in~\cref{tab:cogent_conditions_supplement}.
+\noindent The combinations of attributes in CoGenT-A and CoGenT-B are shown in~\cref{tab:cogent_conditions_supplement}.
 \begin{table}[ht]
 	\centering
 	\begin{tabular}{cccc}
@@ -28,7 +28,7 @@ The combinations of attributes in CoGenT-A and CoGenT-B are shown in~\cref{tab:c
 	\label{tab:cogent_conditions_supplement}
 \end{table}
 
-The Canonical and Hard variants of the COG dataset~\cite{yang2018dataset} are contrasted in~\cref{tab:cog_variants_supplement}.
+\noindent The Canonical and Hard variants of the COG dataset~\cite{yang2018dataset} are contrasted in~\cref{tab:cog_variants_supplement}.
 \begin{table}[ht]
 	\centering
 	\begin{tabular}{lcccccc}
