--- a/Transfer_Learning/arxiv_version/arxiv_paper_main.tex
+++ b/Transfer_Learning/arxiv_version/arxiv_paper_main.tex
@@ -86,9 +86,9 @@
 \author{%
 T.S. Jayram\thanks{\textit{Almaden Research Center, San Jose, CA, USA}.} \hspace{1cm} \and  
 Vincent Marois\thanks{\textit{Thomas J. Watson Research Center, Yorktown Heights, NY, USA}.} \hspace{1cm} \and 
-Tomasz Kornuta\thanks{Currently at Nvidia. \textit{Santa Clara, CA, USA}.} \and
+Tomasz Kornuta\thanks{Currently at NVIDIA. \textit{Santa Clara, CA, USA}.} \and
 \hspace{2cm} Vincent Albouy\footnotemark[1]  \hspace{1cm} \and 
-Emre Sevgen\thanks{Currently at Citrine Informatics}  \hspace{1cm} \and 
+Emre Sevgen\thanks{Currently at Citrine Informatics.}  \hspace{1cm} \and 
 Ahmet S. Ozcan\footnotemark[1] \and \\
 IBM Research AI
 }
